[gd_scene load_steps=23 format=3 uid="uid://bfovnb0y6i6mr"]

[ext_resource type="Script" path="res://prefabs/main.gd" id="1_bfam1"]
[ext_resource type="Material" uid="uid://dm157s57mfhfe" path="res://addons/kenney_prototype_tools/materials/dark/material_02.tres" id="2_akf57"]
[ext_resource type="Script" path="res://addons/rivet_sdk/multiplayer_manager.gd" id="2_be0xl"]
[ext_resource type="PackedScene" uid="uid://bh524dlowrlcc" path="res://prefabs/controllers/player_controller.tscn" id="2_cfrf8"]
[ext_resource type="Material" uid="uid://csfdcdo2s8jaw" path="res://addons/kenney_prototype_tools/materials/orange/material_04.tres" id="3_ipxn5"]
[ext_resource type="Material" uid="uid://8ylcw0h1lkhg" path="res://addons/kenney_prototype_tools/materials/orange/material_01.tres" id="5_xc2ua"]
[ext_resource type="Script" path="res://prefabs/chat_box.gd" id="6_q6316"]
[ext_resource type="Shader" path="res://prefabs/alpha_multi.gdshader" id="6_tmtxm"]
[ext_resource type="Script" path="res://prefabs/main_menu.gd" id="7_3jcom"]
[ext_resource type="Script" path="res://prefabs/avatar_selection.gd" id="9_1lktg"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_4gqs0"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_h53ua"]
sky_material = SubResource("ProceduralSkyMaterial_4gqs0")

[sub_resource type="Environment" id="Environment_guy2x"]
background_mode = 2
sky = SubResource("Sky_h53ua")
tonemap_mode = 2

[sub_resource type="PlaneMesh" id="PlaneMesh_f7m22"]
material = ExtResource("2_akf57")
size = Vector2(200, 200)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_b142w"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_folju"]
plane = Plane(-1, 0, 0, 0)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_i40gs"]
plane = Plane(1, 0, 0, 0)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_pa0nd"]
plane = Plane(0, 0, 1, 0)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_ddakx"]
plane = Plane(0, 0, -1, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5wdwo"]
shader = ExtResource("6_tmtxm")
shader_parameter/alpha = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y1fi4"]
bg_color = Color(0.598309, 0.598309, 0.598309, 0.117647)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_stw70"]
shader = ExtResource("6_tmtxm")
shader_parameter/alpha = 0.0

[node name="Main" type="Node"]
script = ExtResource("1_bfam1")

[node name="RivetMultiplayerManager" type="Node" parent="."]
script = ExtResource("2_be0xl")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://prefabs/player.tscn")
spawn_path = NodePath("../World/Synchronized")

[node name="PlayerController" parent="." instance=ExtResource("2_cfrf8")]
unique_name_in_owner = true

[node name="World" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="World"]
environment = SubResource("Environment_guy2x")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="World"]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="Static" type="Node3D" parent="World"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="World/Static"]
mesh = SubResource("PlaneMesh_f7m22")

[node name="WorldBoundary" type="StaticBody3D" parent="World/Static"]

[node name="Floor" type="CollisionShape3D" parent="World/Static/WorldBoundary"]
shape = SubResource("WorldBoundaryShape3D_b142w")

[node name="EastWall" type="CollisionShape3D" parent="World/Static/WorldBoundary"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 100, 0, 0)
shape = SubResource("WorldBoundaryShape3D_folju")

[node name="WestWall" type="CollisionShape3D" parent="World/Static/WorldBoundary"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -100, 0, 0)
shape = SubResource("WorldBoundaryShape3D_i40gs")

[node name="NorthWall" type="CollisionShape3D" parent="World/Static/WorldBoundary"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -100)
shape = SubResource("WorldBoundaryShape3D_pa0nd")

[node name="SouthWall" type="CollisionShape3D" parent="World/Static/WorldBoundary"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 100)
shape = SubResource("WorldBoundaryShape3D_ddakx")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="World/Static"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.7411, 0, 0)
material_override = ExtResource("5_xc2ua")
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="World/Static/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 3.6557, -10)
use_collision = true
size = Vector3(7, 7.3114, 7)
material = ExtResource("3_ipxn5")

[node name="CSGBox3D2" type="CSGBox3D" parent="World/Static/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.77891, 6.84207, -4.90796)
size = Vector3(6.40283, 1, 10.8159)
material = ExtResource("3_ipxn5")

[node name="CSGBox3D3" type="CSGBox3D" parent="World/Static/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 0.887389, -0.461021, 0, 0.461021, 0.887389, 5.86904, 3.08329, 7.58691)
size = Vector3(8.19141, 1, 16.6322)
material = ExtResource("3_ipxn5")

[node name="Synchronized" type="Node3D" parent="World"]
unique_name_in_owner = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ChatBox" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_5wdwo")
layout_mode = 3
anchor_left = 0.03
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.9
grow_vertical = 0
mouse_filter = 1
script = ExtResource("6_q6316")

[node name="Panel" type="Panel" parent="CanvasLayer/ChatBox"]
use_parent_material = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_y1fi4")

[node name="ChatHistory" type="RichTextLabel" parent="CanvasLayer/ChatBox/Panel"]
material = SubResource("ShaderMaterial_stw70")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 1
bbcode_enabled = true
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
scroll_active = false
scroll_following = true
context_menu_enabled = true
selection_enabled = true

[node name="ChatInput" type="LineEdit" parent="CanvasLayer/ChatBox"]
visible = false
use_parent_material = true
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 8.0
placeholder_text = "Type to chat"
max_length = 256

[node name="MainMenu" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.839216, 0.854902, 0.941176, 1)
script = ExtResource("7_3jcom")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -27.5
offset_right = 46.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="AvatarMenu" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Choose Your Avatar"

[node name="Name" type="LineEdit" parent="CanvasLayer/MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
placeholder_text = "Name"
alignment = 1
max_length = 36

[node name="ColorPickerButton" type="ColorPickerButton" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Color"
color = Color(0.0666667, 0.466667, 0.262745, 1)
edit_alpha = false

[node name="RegionOption" type="OptionButton" parent="CanvasLayer/MainMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="FindLobby" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Find Lobby"

[node name="AvatarSelection" type="HFlowContainer" parent="CanvasLayer/MainMenu"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("9_1lktg")

[node name="NoSelection" type="Button" parent="CanvasLayer/MainMenu/AvatarSelection"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
text = "No Avatar"

[node name="LobbyStatus" type="RichTextLabel" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 43.0
grow_horizontal = 2
mouse_filter = 2
bbcode_enabled = true
text = "Status"
fit_content = true

[connection signal="focus_entered" from="CanvasLayer/ChatBox/Panel/ChatHistory" to="CanvasLayer/ChatBox" method="_on_focus_entered"]
[connection signal="focus_exited" from="CanvasLayer/ChatBox/Panel/ChatHistory" to="CanvasLayer/ChatBox" method="_on_focus_exited"]
[connection signal="focus_entered" from="CanvasLayer/ChatBox/ChatInput" to="CanvasLayer/ChatBox" method="_on_focus_entered"]
[connection signal="focus_exited" from="CanvasLayer/ChatBox/ChatInput" to="CanvasLayer/ChatBox" method="_on_focus_exited"]
[connection signal="text_submitted" from="CanvasLayer/ChatBox/ChatInput" to="." method="_on_chat_input_text_submitted"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/AvatarMenu" to="CanvasLayer/MainMenu" method="_on_avatar_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/FindLobby" to="." method="_on_find_lobby_pressed"]
